--- a/package.json
+++ b/package.json
@@ -2,12 +2,106 @@
   "name": "mfe-apps",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "yarn nx run client-mfe:serve"
+  },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.3.0",
+    "yarn": "^1.22.21",
+    "zone.js": "~0.13.0"
+  },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^16.2.8",
+    "@angular-devkit/core": "^16.2.8",
+    "@angular-devkit/schematics": "^16.2.8",
+    "@angular-eslint/eslint-plugin": "~16.0.0",
+    "@angular-eslint/eslint-plugin-template": "~16.0.0",
+    "@angular-eslint/template-parser": "~16.0.0",
+    "@angular/cli": "^16.2.8",
+    "@angular/compiler-cli": "^16.2.0",
+    "@angular/language-service": "^16.2.0",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/parse": "^17.4.4",
+    "@compodoc/compodoc": "^1.1.19",
+    "@ecocode/eslint-plugin": "^0.2.0",
+    "@ngneat/until-destroy": "^8.1.4",
+    "@ngrx/schematics": "16.1.0",
+    "@ngrx/store-devtools": "16.1.0",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/web": "16.5.3",
     "@nrwl/workspace": "15.9.2",
-    "nx": "15.9.2"
+    "@nx/angular": "16.5.3",
+    "@nx/cypress": "16.5.3",
+    "@nx/eslint-plugin": "16.5.3",
+    "@nx/jest": "16.5.3",
+    "@nx/js": "16.5.3",
+    "@nx/linter": "16.5.3",
+    "@nx/nest": "16.5.3",
+    "@nx/node": "16.5.3",
+    "@nx/storybook": "16.5.3",
+    "@nx/web": "16.5.3",
+    "@nx/workspace": "16.5.3",
+    "@schematics/angular": "~15.0.0",
+    "@storybook/addon-essentials": "7.1.0",
+    "@storybook/angular": "7.1.0",
+    "@storybook/core-server": "7.1.0",
+    "@testing-library/angular": "14.1.1",
+    "@testing-library/jest-dom": "5.17.0",
+    "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.3",
+    "@types/jest-axe": "^3.5.8",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
+    "ajv": "^8.12.0",
+    "cypress": "^12.16.0",
+    "dayjs": "^1.11.5",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-storybook": "^0.6.13",
+    "gts": "^3.1.1",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
+    "jasmine-core": "~4.6.0",
+    "jasmine-marbles": "~0.9.1",
+    "jest": "29.6.1",
+    "jest-axe": "^8.0.0",
+    "jest-environment-jsdom": "^29.6.1",
+    "jest-preset-angular": "13.1.1",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "lcov-result-merger": "^4.1.0",
+    "ng-packagr": "16.1.0",
+    "nx": "16.5.3",
+    "nx-cloud": "16.1.1",
+    "postcss": "^8.4.5",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
+    "prettier": "^2.6.2",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
+    "typescript": "5.1.6",
+    "webpack": "^5.89.0",
+    "webpack-merge": "^5.8.0"
   }
 }
