--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.1.6",
-    "webpack": "^5.89.0",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.8.0"
   }
 }
